kubernetes/namespace/mealie/mealie-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mealie
  name: mealie
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mealie
  template:
    metadata:
      labels:
        app: mealie
    spec:
      containers:
      - image: ghcr.io/mealie-recipes/mealie:v1.12.0
        name: mealie
        ports:
          - containerPort: 9000
        volumeMounts:
        - mountPath: /app/data
          name: mealie-data  # name of volume that I wanted to be mounted in the above data
      volumes:
      - name: mealie-data
        persistentVolumeClaim:
          claimName: mealie-data
